# support-triage-challenge

./: .env  .env.example  .gitignore  AGENTS.md  CANDIDATE_BRIEF.md  README.md  pyproject.toml
data/: kb_articles.json  labeled_eval.json  tickets.json
src/: kb.py  models.py  triage.py
tests/: test_smoke.py
