[project]
name = "support-triage-exercise"
version = "0.1.0"
description = "Live coding exercise: support ticket triage agent"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
